[package]
name = "wlrigctl"
version = "0.3.0"
edition = "2021"
authors = ["Martin Brodbeck <dg2smb@darc.de>", "wfnutt <33999718+wfnutt@users.noreply.github.com>"]
license = "MIT"
description = """
A rig control program for Wavelog, FLRig and WSJT-X.
Based upon earlier work on clrigctl, by Martin Brodbeck, DG2SMB.
"""

[dependencies]
config = { version = "0.13.4", features = ["yaml"] }
env_logger = "0.10.1"
home = "0.5.5"
log = "0.4.20"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_derive = "1.0.193"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
dxr_client = { version = "0.7.1", features = ["reqwest"] }
url = "2"
serde_json = "1.0.145"
bincode2 = "2.0.1"

[profile.release]
strip = "symbols"

[package.metadata.deb]
maintainer = "wfnutt <33999718+wfnutt@users.noreply.github.com>"
depends = "systemd"
section = "hamradio"
priority = "optional"
assets = [ ["target/release/wlrigctl", "usr/bin/wlrigctl", "755"],
  ["packaging/wlrigctl.service", "usr/lib/systemd/user/wlrigctl.service", "644"],
  ["packaging/example.toml", "usr/share/wlrigctl/example.toml", "644"],
  ["README.md", "usr/share/wlrigctl/README.md", "644"],
]
