[package]
name = "wlrigctl"
version = "0.4.2"
edition = "2021"
authors = ["Martin Brodbeck <dg2smb@darc.de>", "wfnutt <33999718+wfnutt@users.noreply.github.com>"]
license = "X11"
description = """
A rig control program for Wavelog, FLRig and WSJT-X.
Based upon earlier work on clrigctl, by Martin Brodbeck, DG2SMB.
"""

[dependencies]
bincode2 = "2.0.1"
config = { version = "0.15.22", default-features = false, features = ["toml"] }
dxr = { version = "0.7.1", features = ["multicall"] }
dxr_client = { version = "0.7.1", features = ["reqwest", "multicall"] }
env_logger = "0.10.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
home = "0.5.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4.20"
rcgen = { version = "0.14", default-features = false, features = ["pem", "aws_lc_rs"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync", "net", "time", "signal", "io-util"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.29"
tokio-util = { version = "0.7" }
url = "2"

[profile.release]
strip = "symbols"

[package.metadata.deb]
maintainer = "wfnutt <33999718+wfnutt@users.noreply.github.com>"
depends = "systemd"
section = "hamradio"
priority = "optional"
assets = [ ["target/release/wlrigctl", "usr/bin/wlrigctl", "755"],
  ["packaging/wlrigctl.service", "usr/lib/systemd/user/wlrigctl.service", "644"],
  ["packaging/example.toml", "usr/share/wlrigctl/example.toml", "644"],
  ["README.md", "usr/share/wlrigctl/README.md", "644"],
]
